# Qwen-TensorRT-LLM

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  SEND_POINT_README.md  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml
tensorrt_llm_july-release-v1/cpp/benchmarks/: CMakeLists.txt  gptSessionBenchmark.cpp
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/: CMakeLists.txt
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/batch_manager/: batchSlotManager.h  trtGptModel.h  trtGptModelFactory.h  trtGptModelInflightBatching.h  trtGptModelV1.h
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/common/: cudaDriverWrapper.cpp  cudaFp8Utils.cu  cudaTypeUtils.cuh  cudaUtils.h  logger.cpp  logger.h  quantization.h  stringUtils.h  tensor.h  tllmException.cpp  tllmException.h
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/cutlass_extensions/include/cutlass_extensions/: epilogue_helpers.h  tile_interleaved_layout.h
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/kernels/: banBadWords.cu  banBadWords.h  beamSearchPenaltyKernels.cu  beamSearchPenaltyKernels.h  beamSearchTopkKernels.cu  beamSearchTopkKernels.h  decoderMaskedMultiheadAttention.cu  decoderMaskedMultiheadAttention.h  decoderMaskedMultiheadAttentionUtils.h  decodingKernels.cu  decodingKernels.h  gptKernels.cu  gptKernels.h  layernormKernels.cu  lookupKernels.cu  onlineSoftmaxBeamsearchKernels.cu  onlineSoftmaxBeamsearchKernels.h  rmsnormKernels.cu  rmsnormKernels.h  samplingPenaltyKernels.cu  samplingPenaltyKernels.h  samplingTopKKernels.cu  samplingTopKKernels.h  samplingTopPKernels.cu  samplingTopPKernels.h  stopCriteriaKernels.cu  stopCriteriaKernels.h  unfusedAttentionKernels.cu  unfusedAttentionKernels.h
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/kernels/contextFusedMultiHeadAttention/: fmhaRunner.cpp  fmhaRunner.h  fused_multihead_attention_common.h  fused_multihead_attention_v2.h
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/kernels/contextFusedMultiHeadAttention/cubin/: fmha_v2_bf16_128_32_ldgsts_sm90.cubin.cpp  fmha_v2_bf16_128_64_ldgsts_sm90.cubin.cpp  fmha_v2_bf16_256_32_ldgsts_sm90.cubin.cpp  fmha_v2_bf16_256_64_ldgsts_sm90.cubin.cpp  fmha_v2_bf16_64_32_ldgsts_sm90.cubin.cpp  fmha_v2_bf16_64_64_ldgsts_sm90.cubin.cpp  fmha_v2_flash_attention_bf16_128_128_S_16_sm80.cubin.cpp  fmha_v2_flash_attention_bf16_128_128_S_16_sm86.cubin.cpp  fmha_v2_flash_attention_bf16_128_128_S_16_sm89.cubin.cpp  fmha_v2_flash_attention_bf16_128_128_S_32_sm80.cubin.cpp  fmha_v2_flash_attention_bf16_128_128_S_32_sm86.cubin.cpp  fmha_v2_flash_attention_bf16_128_128_S_32_sm89.cubin.cpp  fmha_v2_flash_attention_bf16_128_128_S_40_sm80.cubin.cpp  fmha_v2_flash_attention_bf16_128_128_S_40_sm86.cubin.cpp  fmha_v2_flash_attention_bf16_128_128_S_40_sm89.cubin.cpp  fmha_v2_flash_attention_bf16_128_128_S_64_sm80.cubin.cpp  fmha_v2_flash_attention_bf16_128_128_S_64_sm86.cubin.cpp  fmha_v2_flash_attention_bf16_128_128_S_64_sm89.cubin.cpp  fmha_v2_flash_attention_bf16_128_64_S_128_sm80.cubin.cpp  fmha_v2_flash_attention_bf16_128_64_S_128_sm86.cubin.cpp  fmha_v2_flash_attention_bf16_128_64_S_128_sm89.cubin.cpp  fmha_v2_flash_attention_bf16_128_64_S_80_sm80.cubin.cpp  (+156 more)
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/kernels/cutlass_kernels/: cutlass_preprocessors.cpp
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/kernels/decoderMaskedMultiheadAttention/: copy_cu.py  decoderMaskedMultiheadAttentionLaunch.h  decoderMaskedMultiheadAttentionTemplate.h
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/layers/: baseBeamSearchLayer.cu  baseBeamSearchLayer.h  baseSamplingLayer.cpp  baseSamplingLayer.h  decodingParams.h  dynamicDecodeLayer.cpp  dynamicDecodeLayer.h  onlineBeamSearchLayer.cu  topKSamplingLayer.cu  topPSamplingLayer.cu
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/plugins/: CMakeLists.txt
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/plugins/api/: InferPlugin.cpp
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/plugins/bertAttentionPlugin/: bertAttentionPlugin.cpp
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/plugins/common/: plugin.cpp  plugin.h
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/plugins/gptAttentionCommon/: gptAttentionCommon.cpp  gptAttentionCommon.h  gptAttentionCommonImpl.h
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/plugins/gptAttentionPlugin/: gptAttentionPlugin.cpp  gptAttentionPlugin.h
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/plugins/ibGptAttentionPlugin/: ibGptAttentionPlugin.cpp  ibGptAttentionPlugin.h
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/plugins/layernormPlugin/: layernormPlugin.cpp
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/plugins/layernormQuantizationPlugin/: layernormQuantizationPlugin.cpp
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/plugins/lookupPlugin/: lookupPlugin.cpp  lookupPlugin.h
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/plugins/ncclPlugin/: allgatherPlugin.cpp  allreducePlugin.cpp  recvPlugin.cpp  sendPlugin.cpp
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/plugins/rmsnormPlugin/: rmsnormPlugin.cpp  rmsnormPlugin.h
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/plugins/rmsnormQuantizationPlugin/: rmsnormQuantizationPlugin.cpp  rmsnormQuantizationPlugin.h
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/plugins/smoothQuantGemmPlugin/: smoothQuantGemmPlugin.cpp  smoothQuantGemmPlugin.h
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/plugins/weightOnlyQuantMatmulPlugin/: weightOnlyQuantMatmulPlugin.cpp
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/runtime/: CMakeLists.txt  bufferManager.cpp  bufferView.h  gptDecoder.cpp  gptDecoderBatch.cpp  gptJsonConfig.cpp  gptSession.cpp  gptSessionWithDecoderBatch.cpp  iBuffer.cpp  iTensor.cpp  runtimeKernels.cu  runtimeKernels.h  tensorView.h  tllmBuffers.h  tllmRuntime.cpp
tensorrt_llm_july-release-v1/cpp/tensorrt_llm/thop/: CMakeLists.txt  dynamicDecodeOp.cpp  dynamicDecodeOp.h  gatherTreeOp.cpp  thUtils.h
tensorrt_llm_july-release-v1/examples/openai_triton/: CMakeLists.txt  README.md  TritonFlashAttentionPlugin.cpp  TritonFlashAttentionPlugin.h  build.py  fmha_triton.py  plugin.py  run.py
(+380 files in other folders)
